Downloads/project_fl-a/test/parser/bad/a_bad_continue.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

continue
